apps/base/traefik/traefik-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: traefik
        image: traefik:v3.0
        args:
          - --experimental.kubernetesgateway=true
          - --providers.kubernetesgateway=true
          - --log.level=DEBUG
          - --entrypoints.web.address=:80
          - --entrypoints.websecure.address=:443
        ports:
          - name: web
            containerPort: 80
          - name: websecure
            containerPort: 443
        resources:
          requests:
            cpu: "100m"
            memory: "50Mi"
          limits:
            cpu: "300m"
            memory: "150Mi"
